--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         }
     </style>
 
-    <link rel="stylesheet" href="/assets/vendor-c7976e1d9e55e8105364e3b4c3f5d479.css"/>
-    <link rel="stylesheet" href="/assets/application-ea6b580e4a4aa612e24d61c0d0933d04.css"/>
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/vendor.css"/>
+    <link rel="stylesheet" href="assets/application.css"/>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
     <script type="text/javascript">
         window.contextPath = "";
@@ -29,7 +29,7 @@
 <header class="main navbar-fixed-top" ng-if="!isCurrentState('player')" streama-header-directive>
   <div class="pull-left flex">
     <a class="logo" ui-sref="dash">
-      <img class="null" src="/assets/logo.png" alt="Streama Logo">
+      <img class="null" src="assets/logo.png" alt="Streama Logo">
       <div class="spinner" ng-show="baseData.loading">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
@@ -110,7 +110,7 @@
             <button id="single-button" type="button" class="btn btn-primary btn-sm header-btn profile-select-dropdown"
                     uib-dropdown-toggle ng-disabled="disabled">
               <div class="avatar-in-header" ng-style="{'background-color': '#'+($root.currentProfile.avatarColor || '0b74b2')}">
-                <img src="/assets/streama-profile-smiley.png" alt="">
+                <img src="assets/streama-profile-smiley.png" alt="">
               </div>
               <p>{{$root.currentProfile.profileName || $root.currentUser.fullName || $root.currentUser.username}}</p>
               <span class="caret"></span>
@@ -119,7 +119,7 @@
                 uib-dropdown-menu role="menu" aria-labelledby="single-button">
               <li role="menuitem" class="header-profile-item" ng-repeat="prof in $root.usersProfiles" ng-click="$root.setCurrentSubProfile(prof)">
                 <div class="avatar-in-header" ng-style="{'background-color': '#'+(prof.avatarColor || '0b74b2')}">
-                  <img src="/assets/streama-profile-smiley.png" alt="">
+                  <img src="assets/streama-profile-smiley.png" alt="">
                 </div>
                 <a>{{prof.profileName}} <i ng-if="prof.isChild" class="icon-baby2"></i></a>
               </li>
