Add service worker and its dependencies

--- a/index.html
+++ b/index.html
@@ -161,7 +161,16 @@
 
     <script type="text/javascript" src="assets/vendor.js" ></script>
     <script type="text/javascript" src="assets/streama/streama.js" ></script>
-
+    <script>
+      // Check that service workers are supported
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('service-worker.js');
+        });
+      }
+      </script>
+      
     
 </body>
 </html>
